cluster/apps/abs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abs
  namespace: abs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abs
  template:
    metadata:
      labels:
        app: abs
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: abs
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: audiobooks
              mountPath: /audiobooks
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: abs-config
        - name: metadata
          persistentVolumeClaim:
            claimName: abs-metadata
        - name: audiobooks
          persistentVolumeClaim:
            claimName: abs-audiobooks
