cluster/apps/abs/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: abs-nodeport
  namespace: abs
  labels:
    app: abs
spec:
  selector:
    app: abs
  ports:
    - name: abs
      port: 5000
      targetPort: 5000
      nodePort: 30500
  type: NodePort
