cluster/apps/abs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: abs
  namespace: abs
  labels:
    app: abs
spec:
  selector:
    app: abs
  ports:
    - name: abs
      port: 5000
      targetPort: 5000
  type: ClusterIP
